--- a/src/Media/templates/Index/IndexTemplate.scss
+++ b/src/Media/templates/Index/IndexTemplate.scss
@@ -8,5 +8,9 @@
 
   .media-list {
     @include reset-list;
+
+    article {
+      @include rhythm-v;
+    }
   }
 }
